advance body index

--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="./assets/styles/index.css" />
     <link rel="stylesheet" href="./assets/styles/variables.css" />
+    <link rel="stylesheet" href="./assets/styles/sections.css">
+    <link rel="stylesheet" href="./assets/styles/cards.css">
     <title>TriadaLaser</title>
   </head>
   <body>
@@ -48,7 +50,35 @@
           <label>Hacemos tus proyectos realidad</label>
         </div>
       </header>
-      <section></section>
+      <section>
+        <div class="content_sect">
+          <picture>
+            <img src="./assets/img/imagen_de_stock.jpg" alt="imagen de primer sect">
+          </picture>
+          <div>
+            <h2>¿Necesitas un trabajo personalizado?</h2>
+            <br>
+            <p>
+              Lorem ipsum dolor sit amet consectetur, adipisicing elit. Sunt eius deleniti soluta voluptates fuga porro placeat animi nulla exercitationem, 
+              officia aperiam accusantium eum quibusdam praesentium, voluptas asperiores ipsa unde molestias dignissimos rem, quod quaerat inventore fugit dolorem! 
+              Recusandae, debitis nihil.
+            </p>
+          </div>
+        </div>        
+      </section>
+      <section class="content_cards">
+        <h2>Tipos de trabajo</h2>
+        <div>
+          <div class="card">
+            <picture>
+              <img src="./assets/img/stock_2.jpg" alt="">
+            </picture>
+            <div class="content_text">
+  
+            </div>
+        </div>
+        </div>
+      </section>
     </main>
   </body>
 </html>
