create interview cards

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="./assets/styles/variables.css" />
     <link rel="stylesheet" href="./assets/styles/sections.css">
     <link rel="stylesheet" href="./assets/styles/cards.css">
+    <link rel="stylesheet" href="./assets/styles/footer.css">
     <title>TriadaLaser</title>
   </head>
   <body>
@@ -74,11 +75,74 @@
               <img src="./assets/img/stock_2.jpg" alt="">
             </picture>
             <div class="content_text">
-  
+              <h2>Regalos hechos de madera y detalles</h2>
+              <p>
+                Lorem ipsum, dolor sit amet consectetur adipisicing elit.
+                Animi sit tempore omnis quasi dolor perferendis accusantium maiores, labore exercitationem 
+                placeat impedit voluptates asperiores at beatae! Totam illo eaque inventore magni!
+              </p>
             </div>
-        </div>
+          </div>
+
+          <div class="card">
+            <picture>
+              <img src="./assets/img/stock_7.jpeg" alt="" class="img_color">
+            </picture>
+            <div class="content_text">
+              <h2>Regalos hechos de madera y detalles</h2>
+              <p>
+                Lorem ipsum, dolor sit amet consectetur adipisicing elit.
+                Animi sit tempore omnis quasi dolor perferendis accusantium maiores, labore exercitationem 
+                placeat impedit voluptates asperiores at beatae! Totam illo eaque inventore magni!                
+              </p>
+            </div>
+          </div>
+
+          <div class="card">
+            <picture>
+              <img src="./assets/img/stock_4.jpeg" alt="" class="img_color">
+            </picture>
+            <div class="content_text">
+              <h2>Regalos hechos de madera y detalles</h2>
+              <p>
+                Lorem ipsum, dolor sit amet consectetur adipisicing elit.
+                Animi sit tempore omnis quasi dolor perferendis accusantium maiores, labore exercitationem 
+                placeat impedit voluptates asperiores at beatae! Totam illo eaque inventore magni!
+              </p>
+            </div>
+          </div>
+
+          <div class="card">
+            <picture>
+              <img src="./assets/img/stock_5.jpeg" alt="" class="img_color">
+            </picture>
+            <div class="content_text">
+              <h2>Regalos hechos de madera y detalles</h2>
+              <p>
+                Lorem ipsum, dolor sit amet consectetur adipisicing elit.
+                Animi sit tempore omnis quasi dolor perferendis accusantium maiores, labore exercitationem 
+                placeat impedit voluptates asperiores at beatae! Totam illo eaque inventore magni!
+              </p>
+            </div>
+          </div>
+
         </div>
       </section>
+
+      <footer>
+        <h2>Contactanos en</h2>
+        <div class="text">
+          <p>Numero de telefono: 4152341212</p>        
+          <p>Correo electronico: triadaLaser@gmail.com</p>                  
+        </div>
+        <h2>Encuentranos en nuestras redes sociales</h2>
+        <div class="icons">
+          <div></div>
+          <div></div>
+          <div></div>
+        </div>
+        
+      </footer>
     </main>
   </body>
 </html>
