--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
           <div class="line"></div>
         </li>
         <li>
-          <a>Nosotros</a>
+          <a href="./aboutUs.html">Nosotros</a>
           <div class="line"></div>
         </li>
         <li>
@@ -130,18 +130,52 @@
       </section>
 
       <footer>
-        <h2>Contactanos en</h2>
-        <div class="text">
-          <p>Numero de telefono: 4152341212</p>        
-          <p>Correo electronico: triadaLaser@gmail.com</p>                  
+        <div class="top">
+          <div class="box">
+            <div class="personal_info">
+              <h2>Contactanos en</h2>
+              <p>Numero de telefono: 4152341212</p>        
+              <p>Correo electronico: 
+                <a href="">
+                  triadaLaser@gmail.com
+                </a>
+              </p> 
+            </div>
+            <div class="search_social">
+              <h2>Encuentranos en nuestras redes sociales</h2>
+              <div class="icons">
+                <a href="">
+                  <img src="./assets/img/facebook.png" alt="">              
+                </a>
+                <a href="https://www.instagram.com/triadalaser?igsh=cDF4dWI4cXljemVi">
+                  <img src="./assets/img/instagram.png" alt="">
+                </a>
+                <a href="">
+                  <img src="./assets/img/logotipos.png" alt="">
+                </a>
+                <a href="https://wa.me/4151027382?text=Hola%20me%20gustaria%20cotizar">
+                  <img src="./assets/img/whats.png" alt="">
+                </a>
+              </div>                  
+            </div>
+          </div>
+          <div class="box">
+            <h2>Localizacion</h2>
+            <div class="content_maps">
+              <div class="content_text">
+                <p>Av. Las americas #119, Ignacio Ramirez, San Miguel de Allende</p>
+              </div>
+              <div class="map"> 
+                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3727.334467847386!2d-100.75089462578157!3d20.89885909222957!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x842b51a98698b87f%3A0x8363b36ec9a250b6!2sLa%20Paz%2C%20Allende%2C%20San%20Miguel%20de%20Allende%2C%20Gto.!5e0!3m2!1ses!2smx!4v1728066480654!5m2!1ses!2smx" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+              </div>
+            </div>
+          </div>   
         </div>
-        <h2>Encuentranos en nuestras redes sociales</h2>
-        <div class="icons">
-          <div></div>
-          <div></div>
-          <div></div>
+        <div class="bottom">
+          <div class="box">
+              <p>Copyright © 2024 by TriadaLaser</p>
+          </div>           
         </div>
-        
       </footer>
     </main>
   </body>
