--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="./assets/styles/sections.css">
     <link rel="stylesheet" href="./assets/styles/cards.css">
     <link rel="stylesheet" href="./assets/styles/footer.css">
+    <link rel="shortcut icon" href="./assets/img/logo.jpg" >
     <title>TriadaLaser</title>
   </head>
   <body>
@@ -180,3 +181,5 @@
     </main>
   </body>
 </html>
+
+<script src=""></script>
