--- a/index.html
+++ b/index.html
@@ -5,17 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="./assets/styles/index.css" />
     <link rel="stylesheet" href="./assets/styles/variables.css" />
-<<<<<<< HEAD
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
       href="https://fonts.googleapis.com/css2?family=Protest+Guerrilla&display=swap"
       rel="stylesheet"
     />
-=======
-    <link rel="stylesheet" href="./assets/styles/sections.css">
-    <link rel="stylesheet" href="./assets/styles/cards.css">
->>>>>>> 05a82c617ee9f47510e7798cf8f521bd21bc1458
     <title>TriadaLaser</title>
   </head>
   <body>
@@ -69,30 +64,34 @@
       <section>
         <div class="content_sect">
           <picture>
-            <img src="./assets/img/imagen_de_stock.jpg" alt="imagen de primer sect">
+            <img
+              src="./assets/img/imagen_de_stock.jpg"
+              alt="imagen de primer sect"
+            />
           </picture>
           <div>
             <h2>¿Necesitas un trabajo personalizado?</h2>
-            <br>
+            <br />
             <p>
-              Lorem ipsum dolor sit amet consectetur, adipisicing elit. Sunt eius deleniti soluta voluptates fuga porro placeat animi nulla exercitationem, 
-              officia aperiam accusantium eum quibusdam praesentium, voluptas asperiores ipsa unde molestias dignissimos rem, quod quaerat inventore fugit dolorem! 
-              Recusandae, debitis nihil.
+              Lorem ipsum dolor sit amet consectetur, adipisicing elit. Sunt
+              eius deleniti soluta voluptates fuga porro placeat animi nulla
+              exercitationem, officia aperiam accusantium eum quibusdam
+              praesentium, voluptas asperiores ipsa unde molestias dignissimos
+              rem, quod quaerat inventore fugit dolorem! Recusandae, debitis
+              nihil.
             </p>
           </div>
-        </div>        
+        </div>
       </section>
       <section class="content_cards">
         <h2>Tipos de trabajo</h2>
         <div>
           <div class="card">
             <picture>
-              <img src="./assets/img/stock_2.jpg" alt="">
+              <img src="./assets/img/stock_2.jpg" alt="" />
             </picture>
-            <div class="content_text">
-  
-            </div>
-        </div>
+            <div class="content_text"></div>
+          </div>
         </div>
       </section>
     </main>
