new features pop chat and pop up

--- a/index.html
+++ b/index.html
@@ -20,18 +20,21 @@
     <title>TriadaLaser</title>
   </head>
   <body>
-    <nav>
+
+    <!--  -->
+
+    <nav id="navMain">
       <ul class="nav2_1">
         <ul>
           <li>
             <picture>
-              <img src="./assets/img/logo.jpg" alt="" />
+              <img src="./assets/img/logo.jpg" alt="" id="logo" />
             </picture>
           </li>
         </ul>
         <ul class="nav2">
           <li id="btn_nav">
-            <img src="./assets/img/list.png" alt="" />
+            <img src="./assets/img/list.png" alt="" id="navMenu" />
           </li>
         </ul>
       </ul>
@@ -54,6 +57,21 @@
         </li>
       </ul>
     </nav>
+
+    <div class="popchat" title="chat rapido">
+      <picture>
+        <img src="./assets/img/mensajero.png" alt="chat">
+      </picture>
+    </div>
+
+    <div class="up" id="up" title="Subir" hidden>
+      <picture>
+        <img src="./assets/img/up.png" alt="">
+      </picture>
+    </div>
+
+    <!--  -->
+
     <main>
       <header class="content_media">
         <div>
@@ -92,21 +110,20 @@
       <section class="content_cards">
         <h2>Tipos de trabajo</h2>
         <div>
+
           <div class="card">
             <picture>
               <img src="./assets/img/stock_2.jpg" alt="" />
             </picture>
-            <div class="content_text"></div>
+            <div class="content_text">
+              <h2>Regalos hechos de madera y detalles</h2>
+              <p>
+                Lorem ipsum, dolor sit amet consectetur adipisicing elit.
+                Animi sit tempore omnis quasi dolor perferendis accusantium maiores, labore exercitationem 
+                placeat impedit voluptates asperiores at beatae! Totam illo eaque inventore magni!
+              </p>
+            </div>
           </div>
-          <div class="content_text">
-            <h2>Regalos hechos de madera y detalles</h2>
-            <p>
-              Lorem ipsum, dolor sit amet consectetur adipisicing elit.
-              Animi sit tempore omnis quasi dolor perferendis accusantium maiores, labore exercitationem 
-              placeat impedit voluptates asperiores at beatae! Totam illo eaque inventore magni!
-            </p>
-          </div>
-        </div>
 
           <div class="card">
             <picture>
