--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
         </div>
       </section>
       <section class="content_cards">
-        <h2>Tipos de trabajo</h2>
+        <h2 class="label">Ofertas y cupones</h2>
         <div>
 
           <div class="card">
@@ -116,12 +116,14 @@
               <img src="./assets/img/stock_2.jpg" alt="" />
             </picture>
             <div class="content_text">
-              <h2>Regalos hechos de madera y detalles</h2>
+              <h2>Promosion en cajas del 30%</h2>
               <p>
-                Lorem ipsum, dolor sit amet consectetur adipisicing elit.
-                Animi sit tempore omnis quasi dolor perferendis accusantium maiores, labore exercitationem 
-                placeat impedit voluptates asperiores at beatae! Totam illo eaque inventore magni!
+                Para este 14 de febrero, podras regalar un detalle bello y original a tu pareja
+                con el descuento del <strong>30%</strong> en nuestras cajitas decoradas.              
               </p>
+              <div class="content_btn">
+                <button>Ver oferta</button>
+              </div>
             </div>
           </div>
 
@@ -136,6 +138,9 @@
                 Animi sit tempore omnis quasi dolor perferendis accusantium maiores, labore exercitationem 
                 placeat impedit voluptates asperiores at beatae! Totam illo eaque inventore magni!                
               </p>
+              <div class="content_btn">
+                <button>Ver oferta</button>
+              </div>
             </div>
           </div>
 
@@ -150,6 +155,9 @@
                 Animi sit tempore omnis quasi dolor perferendis accusantium maiores, labore exercitationem 
                 placeat impedit voluptates asperiores at beatae! Totam illo eaque inventore magni!
               </p>
+              <div class="content_btn">
+                <button>Ver oferta</button>
+              </div>
             </div>
           </div>
 
@@ -164,6 +172,9 @@
                 Animi sit tempore omnis quasi dolor perferendis accusantium maiores, labore exercitationem 
                 placeat impedit voluptates asperiores at beatae! Totam illo eaque inventore magni!
               </p>
+              <div class="content_btn">
+                <button>Ver oferta</button>
+              </div>
             </div>
           </div>
         </div>
