--- a/index.html
+++ b/index.html
@@ -120,10 +120,10 @@
               <p>
                 Para este 14 de febrero, podras regalar un detalle bello y original a tu pareja
                 con el descuento del <strong>30%</strong> en nuestras cajitas decoradas.              
-              </p>
-              <div class="content_btn">
-                <button>Ver oferta</button>
-              </div>
+              </p>              
+            </div>
+            <div class="content_btn">
+              <button>Ver oferta</button>
             </div>
           </div>
 
@@ -132,15 +132,14 @@
               <img src="./assets/img/stock_7.jpeg" alt="" class="img_color">
             </picture>
             <div class="content_text">
-              <h2>Regalos hechos de madera y detalles</h2>
+              <h2>Llevate de regalo</h2>
               <p>
-                Lorem ipsum, dolor sit amet consectetur adipisicing elit.
-                Animi sit tempore omnis quasi dolor perferendis accusantium maiores, labore exercitationem 
-                placeat impedit voluptates asperiores at beatae! Totam illo eaque inventore magni!                
-              </p>
-              <div class="content_btn">
-                <button>Ver oferta</button>
-              </div>
+                En la compra de cualquiera de nuestros articulos con tematica de 14 de febrero
+                llevate de regalo este arreglo de flores cangeando este cupon.
+              </p>              
+            </div>
+            <div class="content_btn">
+              <button>Ver oferta</button>
             </div>
           </div>
 
@@ -149,15 +148,15 @@
               <img src="./assets/img/stock_4.jpeg" alt="" class="img_color">
             </picture>
             <div class="content_text">
-              <h2>Regalos hechos de madera y detalles</h2>
+              <h2>Promosion de figuras metalicas</h2>
               <p>
                 Lorem ipsum, dolor sit amet consectetur adipisicing elit.
                 Animi sit tempore omnis quasi dolor perferendis accusantium maiores, labore exercitationem 
                 placeat impedit voluptates asperiores at beatae! Totam illo eaque inventore magni!
-              </p>
-              <div class="content_btn">
-                <button>Ver oferta</button>
-              </div>
+              </p>              
+            </div>
+            <div class="content_btn">
+              <button>Ver oferta</button>
             </div>
           </div>
 
@@ -171,10 +170,10 @@
                 Lorem ipsum, dolor sit amet consectetur adipisicing elit.
                 Animi sit tempore omnis quasi dolor perferendis accusantium maiores, labore exercitationem 
                 placeat impedit voluptates asperiores at beatae! Totam illo eaque inventore magni!
-              </p>
-              <div class="content_btn">
-                <button>Ver oferta</button>
-              </div>
+              </p>              
+            </div>
+            <div class="content_btn">
+              <button>Ver oferta</button>
             </div>
           </div>
         </div>
@@ -185,17 +184,17 @@
           <div class="box">
             <div class="personal_info">
               <h2>Contactanos en</h2>
-              <p>Numero de telefono: 4152341212</p>        
+              <p>Numero de telefono: 442 719 9243</p>        
               <p>Correo electronico: 
-                <a href="">
-                  triadaLaser@gmail.com
+                <a href="mailto:Triada.laser@gmail.com">
+                  Triada.laser@gmail.com
                 </a>
               </p> 
             </div>
             <div class="search_social">
               <h2>Encuentranos en nuestras redes sociales</h2>
               <div class="icons">
-                <a href="">
+                <a href="https://www.facebook.com/profile.php?id=61560510093790&mibextid=ZbWKwL">
                   <img src="./assets/img/facebook.png" alt="">              
                 </a>
                 <a href="https://www.instagram.com/triadalaser?igsh=cDF4dWI4cXljemVi">
@@ -204,7 +203,7 @@
                 <a href="">
                   <img src="./assets/img/logotipos.png" alt="">
                 </a>
-                <a href="https://wa.me/4151027382?text=Hola%20me%20gustaria%20cotizar">
+                <a href="https://wa.me/4427199243?text=Hola%20me%20gustaria%20cotizar">
                   <img src="./assets/img/whats.png" alt="">
                 </a>
               </div>                  
@@ -217,7 +216,7 @@
                 <p>Av. Las americas #119, Ignacio Ramirez, San Miguel de Allende</p>
               </div>
               <div class="map"> 
-                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3727.334467847386!2d-100.75089462578157!3d20.89885909222957!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x842b51a98698b87f%3A0x8363b36ec9a250b6!2sLa%20Paz%2C%20Allende%2C%20San%20Miguel%20de%20Allende%2C%20Gto.!5e0!3m2!1ses!2smx!4v1728066480654!5m2!1ses!2smx" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d59615.46805098082!2d-100.8024692351835!3d20.953850252985912!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x842a69be1f10bcbb%3A0x33841f9ea7f5eba5!2sM%C3%A9xico%2051!5e0!3m2!1ses-419!2smx!4v1728687955963!5m2!1ses-419!2smx" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
               </div>
             </div>
           </div>   
