animation and logo

--- a/index.html
+++ b/index.html
@@ -13,14 +13,13 @@
       href="https://fonts.googleapis.com/css2?family=Protest+Guerrilla&display=swap"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="./assets/styles/sections.css">
-    <link rel="stylesheet" href="./assets/styles/cards.css">
-    <link rel="stylesheet" href="./assets/styles/footer.css">
-    <link rel="shortcut icon" href="./assets/img/logo.jpg" >
+    <link rel="stylesheet" href="./assets/styles/sections.css" />
+    <link rel="stylesheet" href="./assets/styles/cards.css" />
+    <link rel="stylesheet" href="./assets/styles/footer.css" />
+    <link rel="shortcut icon" href="./assets/img/logo.jpg" />
     <title>TriadaLaser</title>
   </head>
   <body>
-
     <!--  -->
 
     <nav id="navMain">
@@ -28,7 +27,7 @@
         <ul>
           <li>
             <picture>
-              <img src="./assets/img/logo.jpg" alt="" id="logo" />
+              <img src="./assets/img/logo_blanco.png" alt="" id="logo" />
             </picture>
           </li>
         </ul>
@@ -60,13 +59,13 @@
 
     <div class="popchat" title="chat rapido">
       <picture>
-        <img src="./assets/img/mensajero.png" alt="chat">
+        <img src="./assets/img/mensajero.png" alt="chat" />
       </picture>
     </div>
 
     <div class="up" id="up" title="Subir" hidden>
       <picture>
-        <img src="./assets/img/up.png" alt="">
+        <img src="./assets/img/up.png" alt="" />
       </picture>
     </div>
 
@@ -82,6 +81,9 @@
             />
             Su navegador no puede reproducir este formato de video
           </video>
+          <picture class="logo">
+            <img src="../assets/img/logo_blanco.png" alt="" />
+          </picture>
           <label>TU VISION, NUESTRO CORTE LASER</label>
         </div>
       </header>
@@ -110,7 +112,6 @@
       <section class="content_cards">
         <h2 class="label">Ofertas y cupones</h2>
         <div>
-
           <div class="card">
             <picture>
               <img src="./assets/img/stock_2.jpg" alt="" />
@@ -118,9 +119,10 @@
             <div class="content_text">
               <h2>Promosion en cajas del 30%</h2>
               <p>
-                Para este 14 de febrero, podras regalar un detalle bello y original a tu pareja
-                con el descuento del <strong>30%</strong> en nuestras cajitas decoradas.              
-              </p>              
+                Para este 14 de febrero, podras regalar un detalle bello y
+                original a tu pareja con el descuento del
+                <strong>30%</strong> en nuestras cajitas decoradas.
+              </p>
             </div>
             <div class="content_btn">
               <button>Ver oferta</button>
@@ -129,14 +131,15 @@
 
           <div class="card">
             <picture>
-              <img src="./assets/img/stock_7.jpeg" alt="" class="img_color">
+              <img src="./assets/img/stock_7.jpeg" alt="" class="img_color" />
             </picture>
             <div class="content_text">
               <h2>Llevate de regalo</h2>
               <p>
-                En la compra de cualquiera de nuestros articulos con tematica de 14 de febrero
-                llevate de regalo este arreglo de flores cangeando este cupon.
-              </p>              
+                En la compra de cualquiera de nuestros articulos con tematica de
+                14 de febrero llevate de regalo este arreglo de flores cangeando
+                este cupon.
+              </p>
             </div>
             <div class="content_btn">
               <button>Ver oferta</button>
@@ -145,15 +148,16 @@
 
           <div class="card">
             <picture>
-              <img src="./assets/img/stock_4.jpeg" alt="" class="img_color">
+              <img src="./assets/img/stock_4.jpeg" alt="" class="img_color" />
             </picture>
             <div class="content_text">
               <h2>Promosion de figuras metalicas</h2>
               <p>
-                Lorem ipsum, dolor sit amet consectetur adipisicing elit.
-                Animi sit tempore omnis quasi dolor perferendis accusantium maiores, labore exercitationem 
-                placeat impedit voluptates asperiores at beatae! Totam illo eaque inventore magni!
-              </p>              
+                Lorem ipsum, dolor sit amet consectetur adipisicing elit. Animi
+                sit tempore omnis quasi dolor perferendis accusantium maiores,
+                labore exercitationem placeat impedit voluptates asperiores at
+                beatae! Totam illo eaque inventore magni!
+              </p>
             </div>
             <div class="content_btn">
               <button>Ver oferta</button>
@@ -162,15 +166,16 @@
 
           <div class="card">
             <picture>
-              <img src="./assets/img/stock_5.jpeg" alt="" class="img_color">
+              <img src="./assets/img/stock_5.jpeg" alt="" class="img_color" />
             </picture>
             <div class="content_text">
               <h2>Regalos hechos de madera y detalles</h2>
               <p>
-                Lorem ipsum, dolor sit amet consectetur adipisicing elit.
-                Animi sit tempore omnis quasi dolor perferendis accusantium maiores, labore exercitationem 
-                placeat impedit voluptates asperiores at beatae! Totam illo eaque inventore magni!
-              </p>              
+                Lorem ipsum, dolor sit amet consectetur adipisicing elit. Animi
+                sit tempore omnis quasi dolor perferendis accusantium maiores,
+                labore exercitationem placeat impedit voluptates asperiores at
+                beatae! Totam illo eaque inventore magni!
+              </p>
             </div>
             <div class="content_btn">
               <button>Ver oferta</button>
@@ -184,47 +189,64 @@
           <div class="box">
             <div class="personal_info">
               <h2>Contactanos en</h2>
-              <p>Numero de telefono: 442 719 9243</p>        
-              <p>Correo electronico: 
+              <p>Numero de telefono: 442 719 9243</p>
+              <p>
+                Correo electronico:
                 <a href="mailto:Triada.laser@gmail.com">
                   Triada.laser@gmail.com
                 </a>
-              </p> 
+              </p>
             </div>
             <div class="search_social">
               <h2>Encuentranos en nuestras redes sociales</h2>
               <div class="icons">
-                <a href="https://www.facebook.com/profile.php?id=61560510093790&mibextid=ZbWKwL">
-                  <img src="./assets/img/facebook.png" alt="">              
+                <a
+                  href="https://www.facebook.com/profile.php?id=61560510093790&mibextid=ZbWKwL"
+                >
+                  <img src="./assets/img/facebook.png" alt="" />
                 </a>
-                <a href="https://www.instagram.com/triadalaser?igsh=cDF4dWI4cXljemVi">
-                  <img src="./assets/img/instagram.png" alt="">
+                <a
+                  href="https://www.instagram.com/triadalaser?igsh=cDF4dWI4cXljemVi"
+                >
+                  <img src="./assets/img/instagram.png" alt="" />
                 </a>
                 <a href="">
-                  <img src="./assets/img/logotipos.png" alt="">
+                  <img src="./assets/img/logotipos.png" alt="" />
                 </a>
-                <a href="https://wa.me/4427199243?text=Hola%20me%20gustaria%20cotizar">
-                  <img src="./assets/img/whats.png" alt="">
+                <a
+                  href="https://wa.me/4427199243?text=Hola%20me%20gustaria%20cotizar"
+                >
+                  <img src="./assets/img/whats.png" alt="" />
                 </a>
-              </div>                  
+              </div>
             </div>
           </div>
           <div class="box">
             <h2>Localizacion</h2>
             <div class="content_maps">
               <div class="content_text">
-                <p>Av. Las americas #119, Ignacio Ramirez, San Miguel de Allende</p>
+                <p>
+                  Av. Las americas #119, Ignacio Ramirez, San Miguel de Allende
+                </p>
               </div>
-              <div class="map"> 
-                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d59615.46805098082!2d-100.8024692351835!3d20.953850252985912!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x842a69be1f10bcbb%3A0x33841f9ea7f5eba5!2sM%C3%A9xico%2051!5e0!3m2!1ses-419!2smx!4v1728687955963!5m2!1ses-419!2smx" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+              <div class="map">
+                <iframe
+                  src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d59615.46805098082!2d-100.8024692351835!3d20.953850252985912!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x842a69be1f10bcbb%3A0x33841f9ea7f5eba5!2sM%C3%A9xico%2051!5e0!3m2!1ses-419!2smx!4v1728687955963!5m2!1ses-419!2smx"
+                  width="600"
+                  height="450"
+                  style="border: 0"
+                  allowfullscreen=""
+                  loading="lazy"
+                  referrerpolicy="no-referrer-when-downgrade"
+                ></iframe>
               </div>
             </div>
-          </div>   
+          </div>
         </div>
         <div class="bottom">
           <div class="box">
-              <p>Copyright © 2024 by TriadaLaser</p>
-          </div>           
+            <p>Copyright © 2024 by TriadaLaser</p>
+          </div>
         </div>
       </footer>
     </main>
