correction link logo

--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
             Su navegador no puede reproducir este formato de video
           </video>
           <picture class="logo">
-            <img src="../assets/img/logo_blanco.png" alt="" />
+            <img src="./assets/img/logo_blanco.png" alt="" />
           </picture>
           <label>TU VISION, NUESTRO CORTE LASER</label>
         </div>
