--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
           <div class="line"></div>
         </li>
         <li>
-          <a href="./aboutUs.html">Nosotros</a>
+          <a href="./aboutUs.html">Servicios</a>
           <div class="line"></div>
         </li>
         <li>
@@ -56,6 +56,28 @@
         </li>
       </ul>
     </nav>
+
+    <a class="faceboock social" title="">
+      <picture>
+        <img src="./assets/img/facebook-btn.png" alt="imagen de facebook" />
+      </picture>
+    </a>
+
+    <a class="instagram social" title="">
+      <div>
+        <picture>
+          <img src="./assets/img/instagram-btn.png" alt="imagen de instagram" />
+        </picture>
+      </div>
+    </a>
+
+    <a class="whatsapp social" title="imagen de whatsapp">
+      <div>
+        <picture>
+          <img src="./assets/img/whatsapp.png" alt="" />
+        </picture>
+      </div>
+    </a>
 
     <div class="popchat" title="chat rapido">
       <picture>
