--- a/index.html
+++ b/index.html
@@ -57,13 +57,21 @@
       </ul>
     </nav>
 
-    <a class="faceboock social" title="">
+    <a
+      class="faceboock social"
+      title=""
+      href="https://www.facebook.com/profile.php?id=61560510093790&mibextid=ZbWKwL"
+    >
       <picture>
         <img src="./assets/img/facebook-btn.png" alt="imagen de facebook" />
       </picture>
     </a>
 
-    <a class="instagram social" title="">
+    <a
+      class="instagram social"
+      title=""
+      href="https://www.instagram.com/triadalaser?igsh=cDF4dWI4cXljemVi"
+    >
       <div>
         <picture>
           <img src="./assets/img/instagram-btn.png" alt="imagen de instagram" />
@@ -71,10 +79,14 @@
       </div>
     </a>
 
-    <a class="whatsapp social" title="imagen de whatsapp">
+    <a
+      class="whatsapp social"
+      title=""
+      href="https://wa.me/4427199243?text=Hola%20me%20gustaria%20cotizar"
+    >
       <div>
         <picture>
-          <img src="./assets/img/whatsapp.png" alt="" />
+          <img src="./assets/img/whatsapp.png" alt="imagen de whatsaap" />
         </picture>
       </div>
     </a>
