--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
   </head>
   <body>
     <!--  -->
+    <div class="startpage"></div>
 
     <nav id="navMain">
       <ul class="nav2_1">
@@ -43,11 +44,11 @@
           <div class="line"></div>
         </li>
         <li>
-          <a href="./aboutUs.html">Servicios</a>
+          <a href="./services.html">Servicios</a>
           <div class="line"></div>
         </li>
         <li>
-          <a>Blog</a>
+          <a href="./aboutUs.html">Blog</a>
           <div class="line"></div>
         </li>
         <li>
