--- a/services.html
+++ b/services.html
@@ -106,7 +106,61 @@
     <!--  -->
 
     <main>
-      <section>Aqui va la nueva seccion del blog</section>
+      <section class="section-main">
+        <!--  -->
+
+        <div class="header" data-section="section1">
+          <picture>
+            <img src="./assets/img/gear.png" alt="" />
+          </picture>
+          Encargo personalizado
+        </div>
+        <!--  -->
+
+        <section class="sect-body">
+          <div class="body">Cuerpo</div>
+        </section>
+        <!--  -->
+
+        <div class="header" data-section="section2">
+          <picture>
+            <img src="./assets/img/graduate.png" alt="" />
+          </picture>
+          Cuadros de graduacion
+        </div>
+        <!--  -->
+
+        <section class="sect-body">
+          <div class="body">Cuerpo</div>
+        </section>
+        <!--  -->
+
+        <div class="header" data-section="section3">
+          <picture>
+            <img src="./assets/img/print.png" alt="" />
+          </picture>
+          Impresion Laser
+        </div>
+        <!--  -->
+
+        <section class="sect-body">
+          <div class="body">Cuerpo</div>
+        </section>
+
+        <!--  -->
+        <div class="header" data-section="section4">
+          <picture>
+            <img src="./assets/img/altar.png" alt="" />
+          </picture>
+          Armados y otros
+        </div>
+        <!--  -->
+
+        <section class="sect-body">
+          <div class="body">Cuerpo</div>
+        </section>
+        <!--  -->
+      </section>
 
       <footer>
         <div class="top">
@@ -178,3 +232,4 @@
 </html>
 
 <script src="./assets/js/navBarAction.js"></script>
+<script src="./assets/js/sectionServices.js"></script>
